nuget/Microsoft.WSL.Containers/build/net/Microsoft.WSL.Containers.Interop.cs


        [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Ansi)]
        public static extern int WslcImportSessionImage(
            IntPtr session,
            [MarshalAs(UnmanagedType.LPStr)] string imageName,
            IntPtr imageContent,
            ulong imageContentLength,
            IntPtr options, // pointer to WslcImportImageOptions, or IntPtr.Zero
            out IntPtr errorMessage);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcImportSessionImageFromFile(
            IntPtr session,
            [MarshalAs(UnmanagedType.LPStr)] string imageName,
            [MarshalAs(UnmanagedType.LPWStr)] string path,
            IntPtr options, // pointer to WslcImportImageOptions, or IntPtr.Zero
            out IntPtr errorMessage);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcLoadSessionImage(
            IntPtr session,
            IntPtr imageContent,
            ulong imageContentLength,
            IntPtr options, // pointer to WslcLoadImageOptions, or IntPtr.Zero
            out IntPtr errorMessage);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcLoadSessionImageFromFile(
            IntPtr session,
            [MarshalAs(UnmanagedType.LPWStr)] string path,
            IntPtr options, // pointer to WslcLoadImageOptions, or IntPtr.Zero
            out IntPtr errorMessage);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Ansi)]
        public static extern int WslcDeleteSessionImage(
            IntPtr session,
            [MarshalAs(UnmanagedType.LPStr)] string nameOrId,
            out IntPtr errorMessage);

        /// <summary>
        /// Lists container images. The returned array is CoTaskMem-allocated.
        /// Use <see cref="MarshalImageList"/> to convert to a managed array,
        /// then free the native pointer with Marshal.FreeCoTaskMem.
        /// </summary>
        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcListSessionImages(
            IntPtr session,
            out IntPtr images,
            out uint count);

        // ----------------------------------------------------------------
        // Storage
        // ----------------------------------------------------------------

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcCreateSessionVhdVolume(
            IntPtr session,
            ref WslcVhdRequirements options,
            out IntPtr errorMessage);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall, CharSet = CharSet.Ansi)]
        public static extern int WslcDeleteSessionVhdVolume(
            IntPtr session,
            [MarshalAs(UnmanagedType.LPStr)] string name,
            out IntPtr errorMessage);

        // ----------------------------------------------------------------
        // Install
        // ----------------------------------------------------------------

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcCanRun(
            [MarshalAs(UnmanagedType.Bool)] out bool canRun,
            out WslcComponentFlags missingComponents);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcGetVersion(
            out WslcVersion version);

        [DllImport(DllName, CallingConvention = CallingConvention.StdCall)]
        public static extern int WslcInstallWithDependencies(
            WslcInstallCallback progressCallback,
            IntPtr context);

        // ----------------------------------------------------------------
        // Managed helpers
        // ----------------------------------------------------------------

        /// <summary>
        /// Reads the CoTaskMem-allocated error message string and frees the native memory.
        /// Returns null if the pointer is IntPtr.Zero.
        /// </summary>
        public static string ConsumeErrorMessage(IntPtr errorMessage)
        {
            if (errorMessage == IntPtr.Zero)
                return null;

            string result = Marshal.PtrToStringUni(errorMessage);
            Marshal.FreeCoTaskMem(errorMessage);
            return result;
        }

        /// <summary>
        /// Reads the CoTaskMem-allocated ANSI string and frees the native memory.
        /// Returns null if the pointer is IntPtr.Zero.
        /// </summary>
        public static string ConsumeAnsiString(IntPtr ansiString)
        {
            if (ansiString == IntPtr.Zero)
                return null;

            string result = Marshal.PtrToStringAnsi(ansiString);
            Marshal.FreeCoTaskMem(ansiString);
            return result;
        }

        /// <summary>
        /// Reads a container ID from the byte buffer returned by WslcGetContainerID.
        /// </summary>
        public static string ContainerIdToString(byte[] containerId)
        {
            if (containerId == null)
                throw new ArgumentNullException(nameof(containerId));

            int length = Array.IndexOf(containerId, (byte)0);
            if (length < 0)
                length = containerId.Length;

            return System.Text.Encoding.ASCII.GetString(containerId, 0, length);
        }

        /// <summary>
        /// Marshals a native CoTaskMem-allocated WslcImageInfo array to a managed array
        /// and frees the native memory.
        /// </summary>
        public static WslcImageInfo[] MarshalImageList(IntPtr images, uint count)
        {
            if (images == IntPtr.Zero || count == 0)
                return Array.Empty<WslcImageInfo>();

            var result = new WslcImageInfo[count];
            int structSize = Marshal.SizeOf<WslcImageInfo>();

            for (uint i = 0; i < count; i++)
            {
                IntPtr current = IntPtr.Add(images, (int)(i * structSize));
                result[i] = Marshal.PtrToStructure<WslcImageInfo>(current);
            }

            Marshal.FreeCoTaskMem(images);
            return result;
        }

        /// <summary>
        /// Throws a COMException if the HRESULT indicates failure.
        /// </summary>
        public static void ThrowIfFailed(int hr)
        {
            if (hr < 0)
                Marshal.ThrowExceptionForHR(hr);
        }
    }
}